# PiyoShot

./: .actrc  .commitlintrc.yaml  .gitignore  .gitmodules  CHANGELOG.md  Makefile  PiyoShot.plist  README.ja.md  README.md  control  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer-lock.json  devcontainer.json  postAttachCommand.sh  postCreateCommand.sh
.github/workflows/: deployment.yaml  integration.yaml
Sources/PiyoShot/: ChinlanDispatcher.m  Internal.h  PiyoBatchRunner.h  PiyoBatchRunner.m  PiyoOverlay.h  PiyoOverlay.m  PiyoSheetVC.h  PiyoSheetVC.m  Tweak.m  binpatch_sites.h
Sources/PiyoShot/Hook/: AdHide.m  ExceptionLog.m  ParseSFEN.m  SoundKill.m  Validator.m
assets/: position.txt
docs/plans/: piyoshogi_sideload_capture.md
docs/spec/: piyoshogi_sideload_capture.md
recipes/: piyoshot.py
scripts/: dedup_captures.py  pre-commit
