[project]
name = "piyoshot-tools"
version = "0.1.0"
description = "PiyoShot recipe driving the IPA-Patch/Shared static-patch toolchain."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lief>=0.17.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
# shared/ hosts the IPA-Patch/Shared submodule whose tools/ package is
# imported as `tools.encode`, `tools.machoops`, etc. recipes/ lives at
# the repo root so its modules import as `recipes.piyoshot`.
# Tests for the toolchain itself live in shared/tests/; this repo only
# runs them via the submodule (`make -C shared test`).
pythonpath = [".", "shared"]

[tool.ruff]
# shared/ is a submodule; do not lint it here. Its CI runs ruff on its
# own checkout.
extend-exclude = ["shared"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",
]
